[build-system]
requires = ["setuptools>=61.0.0", "wheel>=0.37.0", "build>=0.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-cdk-bin"
description = "Python wrapper for AWS CDK CLI with on-demand Node.js runtime"
authors = [
    {name="Ruben J. Jongejan", email="ruben.jongejan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "setuptools",
    "requests",  # For downloading Node.js binaries
    "tqdm",      # For download progress bars
    "importlib_resources; python_version < '3.9'",  # For resource management
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "twine>=4.0.0",
    "build>=0.10.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.scripts]
cdk = "aws_cdk_bin.cli:main"

[tool.setuptools]
packages = ["aws_cdk_bin"]
include-package-data = true
package-data = {"aws_cdk_bin" = ["node_binaries/**/*", "node_modules/**/*"]}

[tool.setuptools.dynamic]
version = {attr = "aws_cdk_bin.version.__version__"}

[tool.setuptools.cmdclass]
build_py = "setup.CustomBuildPy"
install = "setup.PostInstallCommand"
develop = "setup.PostDevelopCommand"
sdist = "setup.CustomSdist"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that perform actual downloads and run real commands (run with '--integration')",
] 

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
publish-url = "https://test.pypi.org/legacy/"