[build-system]
requires = ["setuptools>=61.0.0", "wheel>=0.37.0", "build>=0.10.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-cdk-cli"
description = "Python wrapper for AWS CDK CLI with smart Node.js runtime management"
authors = [
    {name="Ruben J. Jongejan", email="ruben.jongejan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # No external dependencies - everything needed is bundled
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "pytest>=7.0.0", # For running tests
    "ruff>=0.0.254", # For linting
    "pytest-cov>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",  # For running tests
    "ruff>=0.0.254",  # For linting
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.scripts]
cdk = "aws_cdk_cli.cli:main"

[tool.setuptools]
packages = ["aws_cdk_cli"]
include-package-data = true
package-data = {"aws_cdk_cli" = ["node_binaries/**/*", "node_modules/**/*"]}

[tool.setuptools.dynamic]
version = {attr = "aws_cdk_cli.version.__version__"}

[tool.setuptools.cmdclass]
build_py = "setup.CustomBuildPy"
install = "setup.PostInstallCommand"
develop = "setup.PostDevelopCommand"
sdist = "setup.CustomSdist"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312", "py313"]
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that perform actual downloads and run real commands (run with '--integration')",
] 

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
publish-url = "https://test.pypi.org/legacy/"
